<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/loginbak"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="#511a18"
    android:layout_marginTop="40dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    >
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/home"
      android:textSize="20sp"
      android:gravity="center"
      android:layout_gravity="center"
      android:textColor="@color/textcolor"

      />

  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    >
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawableTop="@drawable/wc"
      android:text="@string/apply_for_new_connection"
      android:textSize="20sp"
      android:textStyle="bold"
      android:gravity="center"
      android:id="@+id/txt_anc"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawableTop="@drawable/registercomp"
      android:text="@string/register_complaint"
      android:textSize="20sp"
      android:gravity="center"
      android:textStyle="bold"
      android:id="@+id/txt_rc"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="20sp"
      android:textStyle="bold"
      android:drawableTop="@drawable/aboutus"
      android:gravity="center"
      android:text="@string/about_us"
      android:id="@+id/txt_aus"
      />

  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    >
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawableTop="@drawable/contactus"
      android:text="@string/contact_us"
      android:textSize="20sp"
      android:textStyle="bold"
      android:gravity="center"
      android:id="@+id/txt_cus"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawableTop="@drawable/cstatus"
      android:text="@string/connection_status"
      android:textSize="20sp"
      android:gravity="center"
      android:textStyle="bold"
      android:id="@+id/txt_cs"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="20sp"
      android:textStyle="bold"
      android:drawableTop="@drawable/wifi1"
      android:gravity="center"
      android:text="@string/new_plan"
      android:id="@+id/txt_np"
      />

  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    >
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawableTop="@drawable/termcon"
      android:text="@string/term_and_condition"
      android:textSize="20sp"
      android:textStyle="bold"
      android:gravity="center"
      android:id="@+id/txt_tc"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:drawableTop="@drawable/exit"
      android:text="@string/exit_logout"
      android:textSize="20sp"
      android:gravity="center"
      android:id="@+id/txt_lt"
      android:textStyle="bold"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textSize="20sp"
      android:textStyle="bold"
      android:drawableTop="@drawable/wifi1"
      android:gravity="center"

      android:visibility="invisible"
      />

  </LinearLayout>

</LinearLayout>
